--- a/assets/base.css
+++ b/assets/base.css
@@ -2823,7 +2823,12 @@ details-disclosure > details {
   content: none;
 }
 
-
+.global-media-settings img,
+.global-media-settings iframe,
+.global-media-settings model-viewer,
+.global-media-settings video {
+  <!--border-radius: calc(var(--media-radius) - var(--media-border-width));-->
+}
 
 .content-container--full-width,
 .global-media-settings--full-width,
