--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1637,7 +1637,9 @@ line-height: 150%;
 /* or 36px */
 
 text-align: center;
-letter-spacing: 0.01em ;
+letter-spacing: 0.01em 
+  /* white */
+
 color: #FFFFFF;
 }
 .main-banner-content-area h2 span {
