--- a/sections/custom-featured-collection.liquid
+++ b/sections/custom-featured-collection.liquid
@@ -1,5 +1,5 @@
-{{ 'component-card.css' | asset_url | stylesheet_tag }}
-{{ 'component-price.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'component-card.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-price.css' | asset_url }}" as="style">
 <div class="custom-featured-collection">
   <div class="page-width">
     <div class="custom-featured-collection-wrap">
