--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -1,5 +1,5 @@
 {% comment %}theme-check-disable ImgLazyLoading{% endcomment %}
-{{ 'component-collection-hero.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'component-collection-hero.css' | asset_url }}" as="style">
 
 {%- style -%}
   .section-{{ section.id }}-padding {
