--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -1,4 +1,4 @@
-{{ 'component-image-with-text.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'component-image-with-text.css' | asset_url }}" as="style">
 
 {%- style -%}
   .section-{{ section.id }}-padding {
