--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -1,10 +1,11 @@
-{{ 'template-collection.css' | asset_url | stylesheet_tag }}
-{{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }}
-{{ 'component-card.css' | asset_url | stylesheet_tag }}
-{{ 'component-price.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'template-collection.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-loading-overlay.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-card.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-price.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-rte.css' | asset_url }}" as="style">
 {{ 'ajaxinate.min.js' | asset_url | script_tag  }}
 
-<link rel="preload" href="{{ 'component-rte.css' | asset_url }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
 
 {%- if section.settings.enable_quick_add -%}
   <link rel="stylesheet" href="{{ 'quick-add.css' | asset_url }}" media="print" onload="this.media='all'">
@@ -77,7 +78,7 @@
   {%- endif -%}
 
   <div class="{% if section.settings.filter_type == 'vertical' %} facets-vertical page-width{% endif %}">
-    {{ 'component-facets.css' | asset_url | stylesheet_tag }}
+    <link rel="stylesheet" data-href="{{ 'component-facets.css' | asset_url }}" as="style">
     <script src="{{ 'facets.js' | asset_url }}" defer="defer"></script>
     {%- if section.settings.enable_filtering or section.settings.enable_sorting -%}
       <aside aria-labelledby="verticalTitle" class="facets-wrapper{% unless section.settings.enable_filtering %} facets-wrapper--no-filters{% endunless %}{% if section.settings.filter_type != 'vertical' %} page-width{% endif %}" id="main-collection-filters" data-id="{{ section.id }}">
