--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,14 +1,14 @@
 <div class="prod-background">
 <section id="MainProduct-{{ section.id }}" class="page-width section-{{ section.id }}-padding" data-section="{{ section.id }}">
-  {{ 'section-main-product.css' | asset_url | stylesheet_tag }}
-  {{ 'component-accordion.css' | asset_url | stylesheet_tag }}
-  {{ 'component-price.css' | asset_url | stylesheet_tag }}
-  {{ 'component-rte.css' | asset_url | stylesheet_tag }}
-  {{ 'component-slider.css' | asset_url | stylesheet_tag }}
-  {{ 'component-rating.css' | asset_url | stylesheet_tag }}
-  {{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }}
-  {{ 'component-deferred-media.css' | asset_url | stylesheet_tag }}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" data-href="{{ 'section-main-product.css' | asset_url }}" as="style">
+  <link rel="stylesheet" data-href="{{ 'component-accordion.css' | asset_url }}" as="style">
+  <link rel="stylesheet" data-href="{{ 'component-price.css' | asset_url }}" as="style">
+  <link rel="stylesheet" data-href="{{ 'component-rte.css' | asset_url }}" as="style">
+  <link rel="stylesheet" data-href="{{ 'component-slider.css' | asset_url }}" as="style">
+  <link rel="stylesheet" data-href="{{ 'component-rating.css' | asset_url }}" as="style">
+  <link rel="stylesheet" data-href="{{ 'component-loading-overlay.css' | asset_url }}" as="style">
+  <link rel="stylesheet" data-href="{{ 'component-deferred-media.css' | asset_url }}" as="style">
+  <link rel="stylesheet" data-href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   {%- style -%}
   
     .section-{{ section.id }}-padding {
