--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -15,8 +15,8 @@
     Usage:
     {% render 'card-product', show_vendor: section.settings.show_vendor %}
 {% endcomment %}
+<link rel="stylesheet" data-href="{{ 'component-rating.css' | asset_url }}" as="style">
 
-{{ 'component-rating.css' | asset_url | stylesheet_tag }}
 
 {%- if card_product and card_product != empty -%}
   {%- liquid
