--- a/snippets/main-cart-items-drawer.liquid
+++ b/snippets/main-cart-items-drawer.liquid
@@ -1,9 +1,9 @@
-{{ 'component-cart.css' | asset_url | stylesheet_tag }}
-{{ 'component-cart-items.css' | asset_url | stylesheet_tag }}
-{{ 'component-totals.css' | asset_url | stylesheet_tag }}
-{{ 'component-price.css' | asset_url | stylesheet_tag }}
-{{ 'component-discounts.css' | asset_url | stylesheet_tag }}
-{{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'component-cart.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-cart-items.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-totals.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-price.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-discounts.css' | asset_url }}" as="style">
+<link rel="stylesheet" data-href="{{ 'component-loading-overlay.css' | asset_url }}" as="style">
 
 {%- style -%}
   .section-{{ section.id }}-padding {
