--- a/snippets/prod-slider_card.liquid
+++ b/snippets/prod-slider_card.liquid
@@ -16,7 +16,8 @@
     {% render 'prod-slider_card', show_vendor: section.settings.show_vendor %}
 {% endcomment %}
 
-{{ 'component-rating.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'component-rating.css' | asset_url }}" as="style">
+
 
 {%- if card_product and card_product != empty -%}
   {%- liquid
